@@ -117,10 +117,10 @@
     the currently
                     selected one, if you use multiple in advanced measure management mode). Default is 4/4.</li>
 <li><b>Start</b> lets you choose the measure where the song begins. For instance, if you make a long song and are composing measure
-    100, you may not
-                 want to start playing at measure 1 every time you change a note and want to hear how it sounds - you can just
-                 change your song to
-                 begin at, say, measure 95.</li>
+    100, you may not want to start playing at measure 1 every time you change a note and want to hear how it sounds - you can just
+    change your song to begin at, say, measure 95.<br/>
+    <b><i>Tip :</i></b> You can also select where the song start by Ctrl-Clinking or Alt-Clicking in the measure bar
+    </li>
 <li><b>Zoom</b> lets you choose how big the notes will appear on the tracks. It is useful to make it bigger if, for instance, you
     deal with very
                 short notes.</li>
@@ -149,6 +149,10 @@
     You can also click on a measure to select it. This will select all notes contained in this measure. You can do the same for
     multiple measures by dragging the mouse. You can deselect them by deselecting their notes, e.g. by clicking in an empty space in
     the tracks.
+    
+    <br/><br/>
+    Ctrl-clicking or alt-clicking on a measure will also move the playback cursor to this measure, so that next time you press play
+    the song starts there.
     
     <br/><br/>
     
